--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -1,5 +1,9 @@
 {% extends 'rhyme/base.html' %}
 
+{% block js %}{{ block.super }}
+    <script src="/static/rhyme/js/albums.js"></script>
+{% endblock js %}
+
 {% block content %}
     {% include "rhyme/partials/infinite_scroll_item_count.html" with text="albums" %}
     <div class="infinite-scroll-container" data-url="{% url "album_list" %}" data-template="#album-template">
@@ -8,7 +12,8 @@
 {% endblock content %}
 
 {% block templates %}
-    <script type="text/html" id="album-template">
+    {% include "rhyme/partials/song_row.html" %}
+    <script type="text/html" id="album-template"><!-- TODO: extract? -->
         <div data-id="<%= id %>" class="album clearfix">
             <div class="cover-art<% if (!cover_art_filename) { %> missing<% } %>"
                 <% if (color) { %>style="background-color: #<%= color.hex_code %>; color: <% if (color.white_text) { %>white<% } else { %>black<% } %>;"<% } %>>
@@ -47,9 +52,6 @@
                                 <% }) %>
                             </div>
                         </div>
-                        <div style="position: absolute; bottom: 10px; right: 10px;">
-                            {% include "rhyme/partials/export_action.html" with url="<%= export_url %>" %}
-                        </div>
                     </div>
                 </div>
             </div>
@@ -58,3 +60,21 @@
         </div>
     </script>
 {% endblock templates %}
+
+{% block modals %}
+    <div id="song-list" class="modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4>
+                        <div class="pull-right">
+                            {% include "rhyme/partials/export_action.html" with url="<%= export_url %>" %}{# TODO: support export #}
+                        </div>
+                        <span class="modal-title"></span>
+                    </h4>
+                </div>
+                <div class="modal-body"></div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
