--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -19,8 +19,8 @@
         <nav class="navbar navbar-default">
             <a class='navbar-brand' href='#'>Rhyme</a>
             <div class="controls">
-                {% url "export" as export_url %}
-                {% include "rhyme/partials/export_action.html" with url=export_url %}
+                {# TODO: add handling, for both songs page and albums page #}
+                {% include "rhyme/partials/export_action.html" %}
             </div>
             <ul class="nav navbar-nav">
                 <li>
