--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -1,6 +1,14 @@
 {% extends 'rhyme/base.html' %}
 
 {% block content %}
+    {% include 'rhyme/partials/modal_filter_text.html' with name='Tag' lhs='tag' %}
+    {% include 'rhyme/partials/modal_filter_text.html' with name='Artist' lhs='artist' %}
+    {% include 'rhyme/partials/modal_filter_text.html' with name='Name' lhs='name' %}
+    {% include 'rhyme/partials/modal_filter_rating.html' with name='Rating' lhs='rating' %}
+    {% include 'rhyme/partials/modal_filter_rating.html' with name='Energy' lhs='rating' %}
+    {% include 'rhyme/partials/modal_filter_rating.html' with name='Mood'  lhs='mood' %}
+    {% include 'rhyme/partials/modal_filter_bool.html' with name='Starred' lhs='starred' %}
+
     {% include "rhyme/partials/infinite_scroll_item_count.html" with text="songs" %}
     <div class="infinite-scroll-container" data-url="{% url "song_list" %}" data-template="#song-row">
         <table class="song-table table table-striped table-condensed table-hover">
