--- a/rhyme/templates/rhyme/partials/modal_filter_base.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base.html
@@ -1,9 +1,9 @@
-<a class="btn btn-info" data-toggle="modal" data-target="#filter-modal-{{ name|lower }}">
+<a class="btn btn-info" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
     <i class="fa fa-plus"></i>
     {{ name }}
 </a>
 
-<div class="modal filter-modal" id="filter-modal-{{ name|lower }}" tabindex="-1" role="dialog" aria-hidden="true" data-lhs="{{ lhs }}">
+<div class="modal filter-modal" id="filter-modal-{{ name|slugify }}" tabindex="-1" role="dialog" aria-hidden="true" data-lhs="{{ lhs }}">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
