Ported basic functionality to knockout

--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -45,7 +45,7 @@ body > .loading {
     }
 }
 
-.post-nav {
+.post-nav .item-page {
     position: fixed;
     top: @navHeight + @filterContainerHeight;
     bottom: 0;
