--- a/rhyme/templates/rhyme/partials/infinite_scroll_item_count.html
+++ b/rhyme/templates/rhyme/partials/infinite_scroll_item_count.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-sm-12 text-center">
         <div>
-            <span class="badge badge-light infinite-scroll-count"></span> {{ text }}
+            <span class="badge badge-light" data-bind="text: count"></span> {{ text }}
         </div>
     </div>
 </div>
