--- a/rhyme/templates/rhyme/partials/song_row.html
+++ b/rhyme/templates/rhyme/partials/song_row.html
@@ -1,14 +1,12 @@
-<script type="text/html" id="song-row">
-    <tr data-song-id="<%= id %>">
-        <td class="icon-cell is-starred">
-            <i class='<% if (starred) { %>fas<% } else { %>far<% } %> fa-star'></i>
-        </td>
-        <td><%= name %></td>
-        <td><%= artist %></td>
-        <td><%= albums %></td>
-        <td><div contenteditable='true' data-field='rating' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="rating" icon="star" %}</div></td>
-        <td><div contenteditable='true' data-field='energy' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="energy" icon="fire" %}</div></td>
-        <td><div contenteditable='true' data-field='mood' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="mood" icon="heart" %}</div></td>
-        <td contenteditable='true' data-field='tags' class='tags'><%= tags.join(" ") %></td>
-    </tr>
-</script>
+<tr data-bind="attr: {'data-song-id': id }">
+    <td class="icon-cell is-starred">
+        <i data-bind="css: {'fas': starred, 'far': !starred}" class='fa-star'></i>
+    </td>
+    <td data-bind="text: name"></td>
+    <td data-bind="text: artist"></td>
+    <td data-bind="text: albums"></td>
+    <td><div contenteditable='true' data-field='rating' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="rating" icon="star" %}</div></td>
+    <td><div contenteditable='true' data-field='energy' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="energy" icon="fire" %}</div></td>
+    <td><div contenteditable='true' data-field='mood' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="mood" icon="heart" %}</div></td>
+    <td contenteditable='true' data-field='tags' class='tags' data-bind="text: tags.join(' ')"></td>
+</tr>
