--- a/rhyme/templates/rhyme/partials/modal_filter_rating.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_rating.html
@@ -3,33 +3,105 @@
 {% block body%}
     <div class="form-group">
         <div class="row">
-            <div class="col-sm-12"><button class="btn btn-info btn-block" data-op="=" data-rhs="5" data-dismiss="modal">*****</button></div>
+            <div class="col-sm-12">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 5) }" data-dismiss="modal">
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
         </div>
     </div>
     <div class="form-group">
         <div class="row">
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op="<=" data-rhs="4" data-dismiss="modal">at most ****</button></div>
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op="=" data-rhs="4" data-dismiss="modal">****</button></div>
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op=">=" data-rhs="4" data-dismiss="modal">at least ****</button></div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '<=', 4) }" data-dismiss="modal">
+                    at most
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 4) }" data-dismiss="modal">
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '>=', 4) }" data-dismiss="modal">
+                    at least
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
         </div>
     </div>
     <div class="form-group">
         <div class="row">
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op="<=" data-rhs="3"data-dismiss="modal">at most ***</button></div>
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op="=" data-rhs="3" data-dismiss="modal">***</button></div>
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op=">=" data-rhs="3" data-dismiss="modal">at least ***</button></div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '<=', 3) }" data-dismiss="modal">
+                    at most
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 3) }" data-dismiss="modal">
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '>=', 3) }" data-dismiss="modal">
+                    at least
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
         </div>
     </div>
     <div class="form-group">
         <div class="row">
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op="<=" data-rhs="2" data-dismiss="modal">at most **</button></div>
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op="=" data-rhs="2" data-dismiss="modal">**</button></div>
-            <div class="col-sm-4"><button class="btn btn-info btn-block" data-op=">=" data-rhs="2" data-dismiss="modal">at least **</button></div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '<=', 2) }" data-dismiss="modal">
+                    at most
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 2) }" data-dismiss="modal">
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
+            <div class="col-sm-4">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '>=', 2) }" data-dismiss="modal">
+                    at least
+                    <i class='fas fa-{{ icon }}'></i>
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
         </div>
     </div>
     <div class="form-group">
         <div class="row">
-            <div class="col-sm-12"><button class="btn btn-info btn-block" data-op="=" data-rhs="1" data-dismiss="modal">*</button></div>
+            <div class="col-sm-12">
+                <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 1) }" data-dismiss="modal">
+                    <i class='fas fa-{{ icon }}'></i>
+                </button>
+            </div>
         </div>
     </div>
 {% endblock %}
