--- a/rhyme/templates/rhyme/partials/modal_filter_text.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_text.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <button class="btn btn-info btn-block" data-op="=" data-dismiss="modal">Onward</button>
+                <button class="btn btn-info btn-block" data-bind="click: function (model, e) { addFilter('{{ lhs }}', '=', getFilterValue(e)) }" data-dismiss="modal">Onward</button>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="col-sm-6">
-                <button class="btn btn-info btn-block" data-op="=*" data-dismiss="modal">Onward</button>
+                <button class="btn btn-info btn-block" data-bind="click: function (model, e) { addFilter('{{ lhs }}', '=*', getFilterValue(e)) }" data-dismiss="modal">Onward</button>
             </div>
         </div>
     </div>
