--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -42,8 +42,16 @@
     <div class="post-nav">
         {% block content %}{% endblock %}
     </div>
+
     {% block modals %}{% endblock %}
+
     <div id="csrf-token">
         {% csrf_token %}
+    </div>
+
+    <div id="rhyme-urls" class="hidex">
+        {% for name, url in RHYME_URLS.items %}
+            <span data-name="{{ name }}" data-url="{{ url }}"></span>
+        {% endfor %}
     </div>
 {% endblock body %}
