Added support for loading indicator.
Still need to update so this is visible when filtering, not just when scrolling.

--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -28,5 +28,9 @@
                 {% include "rhyme/partials/song_row.html" %}
             </tbody>
         </table>
+        <p class='loading text-center' data-bind='visible: isLoading'>
+            <i class='fas fa-spinner fa-spin'></i>
+            Loading...
+        </p>
     </div>
 {% endblock content %}
