--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -10,8 +10,8 @@
 {% block js %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
     <script src="/static/rhyme/js/utils.js"></script>
-    <script src="/static/rhyme/js/infinite_scroll.js"></script>
     <script src="/static/rhyme/js/song_table.js"></script>
+    <script src="/static/rhyme/js/rhyme.js"></script>
 {% endblock js %}
 
 {% block body %}
