--- a/rhyme/templates/rhyme/partials/export_action.html
+++ b/rhyme/templates/rhyme/partials/export_action.html
@@ -8,7 +8,7 @@
     <ul class="dropdown-menu">
         {% for config in RHYME_EXPORT_CONFIGS %}
             <li>
-                <a href="#" data-config="{{ config.name }}">
+                <a href="#" data-bind="click: function () { exportPlaylist('{{ config.name }}') }">
                     <i class="fas {{ config.icon }}"></i>
                     {{ config.name|title }}
                 </a>
