--- a/rhyme/templates/rhyme/partials/modal_filter_bool.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_bool.html
@@ -2,9 +2,9 @@
 
 {% block body %}
     <div class="form-group">
-        <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 1) }" data-dismiss="modal">On</button>
+        <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 1) }" data-dismiss="modal">On</button>
     </div>
     <div class="form-group">
-        <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ lhs }}', '=', 0) }" data-dismiss="modal">Off</button>
+        <button class="btn btn-info btn-block" data-bind="click: function () { addFilter('{{ model }}', '{{ lhs }}', '=', 0) }" data-dismiss="modal">Off</button>
     </div>
 {% endblock %}
