--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -2,8 +2,9 @@
 
 {% block content %}
     <div class="item-page" data-url="{% url "album_list" %}">
-        {% include 'rhyme/partials/modal_filter_text.html' with model='album' name='Name' lhs='name' %}
+        {% include 'rhyme/partials/modal_filter_text.html' with model='album' name='Album Name' lhs='name' %}
         {% include 'rhyme/partials/modal_filter_bool.html' with model='album' name='Is Mix' lhs='is_mix' %}
+        {% include "rhyme/partials/song_filters.html" %}
 
         {% include "rhyme/partials/item_page_filters.html" %}
         {% include "rhyme/partials/infinite_scroll_item_count.html" with text="albums" %}
