Moves filters outside of scrolling area

--- a/rhyme/templates/rhyme/partials/item_page_filters.html
+++ b/rhyme/templates/rhyme/partials/item_page_filters.html
@@ -1,3 +1,4 @@
+<!-- TODO: filters read-only list is ugly -->
 <ul data-bind="foreach: filters">
     <li>
         <span data-bind="text: serialize()"></span>
