--- a/rhyme/templates/rhyme/partials/modal_filter_base.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base.html
@@ -1,4 +1,4 @@
-<a class="btn btn-info" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
+<a class="btn btn-default" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
     <i class="fa fa-plus"></i>
     {{ name }}
 </a>
