--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -1,8 +1,10 @@
 {% extends 'rhyme/base.html' %}
 
 {% block content %}
-    {% include "rhyme/partials/song_filters.html" %}
-    {% include "rhyme/partials/item_page_filters.html" %}
+    <div id="filter-container">
+        {% include "rhyme/partials/song_filters.html" %}
+        {% include "rhyme/partials/item_page_filters.html" %}
+    </div>
     {% include "rhyme/partials/infinite_scroll_item_count.html" with text="songs" %}
 
     <div class="item-page" data-url="{% url "song_list" %}">
