Added year attribute to song model

--- a/rhyme/templates/rhyme/partials/song_row.html
+++ b/rhyme/templates/rhyme/partials/song_row.html
@@ -8,6 +8,7 @@
     <td data-bind="text: name"></td>
     <td data-bind="text: artist"></td>
     <td data-bind="text: albums"></td>
+    <td data-bind="text: year"></td>
     <td><div contenteditable='true' data-field='rating' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="rating" icon="star" %}</div></td>
     <td><div contenteditable='true' data-field='energy' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="energy" icon="fire" %}</div></td>
     <td><div contenteditable='true' data-field='mood' class="rating">{% include "rhyme/partials/rating.html" with rating_attribute="mood" icon="heart" %}</div></td>
