--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -14,6 +14,7 @@
                 <th>Name</th>
                 <th>Artist</th>
                 <th>Albums</th>
+                <th>Year</th>
                 <th>Rating</th>
                 <th>Energy</th>
                 <th>Mood</th>
