--- a/rhyme/templates/rhyme/partials/song_filters.html
+++ b/rhyme/templates/rhyme/partials/song_filters.html
@@ -4,5 +4,6 @@
 {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Rating' lhs='rating' icon='star' %}
 {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Energy' lhs='energy' icon='fire' %}
 {% include 'rhyme/partials/modal_filter_rating.html' with model='song' name='Mood'  lhs='mood' icon='heart' %}
+{% include 'rhyme/partials/modal_filter_numeric.html' with model='song' name='Year' lhs='year' %}
 {% include 'rhyme/partials/modal_filter_time.html' with model='song' name='Song Length' lhs='time' %}
 {% include 'rhyme/partials/modal_filter_bool.html' with model='song' name='Starred' lhs='starred' %}
