--- a/rhyme/templates/rhyme/albums.html
+++ b/rhyme/templates/rhyme/albums.html
@@ -35,7 +35,7 @@
                 <div class="modal-body">
                     <table class='song-table'>
                         <tbody data-bind="foreach: songs">
-                            {% include "rhyme/partials/song_row.html" with include_index=True %}
+                            {% include "rhyme/partials/song_row.html" %}
                         </tbody>
                     </table>
                 </div>
