--- a/rhyme/templates/rhyme/partials/song_row.html
+++ b/rhyme/templates/rhyme/partials/song_row.html
@@ -3,7 +3,7 @@
         <i data-bind="css: {'fas': starred, 'far': !starred}" class='fa-star'></i>
     </td>
     <td data-bind="visible: track_number, text: track_number + '.'"></td>
-    <td data-bind="text: name"></td>
+    <td class="col-sm-2" data-bind="text: name"></td>
     <td data-bind="text: artist"></td>
     <td data-bind="text: albums"></td>
     <td data-bind="text: year"></td>
