Updated genre filter ot use select2

--- a/rhyme/static/rhyme/style/structure.less
+++ b/rhyme/static/rhyme/style/structure.less
@@ -54,7 +54,7 @@ body > .loading {
             margin-top: @spacingNormal;
         }
 
-        .modal-header {
+        .filter-modal {
             text-align: left;
         }
     }
