--- a/rhyme/templates/rhyme/partials/modal_filter_select.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_select.html
@@ -4,7 +4,7 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-6">
-                <select class="rhs form-control select2" placeholder="{{ attribute }} is">
+                <select class="lhs form-control select2 in-modal">
                     {% for option in options %}
                         <option>{{ option }}</option>
                     {% endfor %}
