--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -3,12 +3,14 @@
 {% block title %}Rhyme{% endblock title %}
 
 {% block style %}
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="/static/fontawesome/css/all.css" />
     <link rel="stylesheet" type="text/less" href="/static/rhyme/style/rhyme.less" />
 {% endblock style %}
 
 {% block js %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
     <script src="/static/rhyme/js/utils.js"></script>
     <script src="/static/rhyme/js/song_table.js"></script>
     <script src="/static/rhyme/js/rhyme.js"></script>
