Switched artist filter to ajax-based select2

--- a/rhyme/templates/rhyme/partials/modal_filter_select.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_select.html
@@ -4,7 +4,7 @@
     <div class="form-group">
         <div class="row">
             <div class="col-sm-6">
-                <select class="lhs form-control select2 in-modal">
+                <select class="lhs form-control select2 in-modal" data-url="{{ url }}">
                     {% for option in options %}
                         <option>{{ option }}</option>
                     {% endfor %}
