--- a/rhyme/templates/rhyme/partials/song_filters.html
+++ b/rhyme/templates/rhyme/partials/song_filters.html
@@ -1,4 +1,4 @@
-{% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Tag' lhs='tag' url='tag_select2' %}
+{% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Tag' lhs='tag' url='tag_select2' include_all=True %}
 {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Artist' lhs='artist' url='artist_select2' %}
 {% include 'rhyme/partials/modal_filter_text.html' with model='song' name='Song Name' lhs='name' %}
 {% include 'rhyme/partials/modal_filter_select.html' with model='song' name='Genre' lhs='genre' options=RHYME_GENRES %}
