Added omni filter to songs page

--- a/rhyme/templates/rhyme/songs.html
+++ b/rhyme/templates/rhyme/songs.html
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div id="filter-container">
+        <input data-bind="value: omniFilter, valueUpdate: 'keyup'" />
         {% include "rhyme/partials/song_filters.html" %}
         {% include "rhyme/partials/item_page_filters.html" %}
     </div>
