--- a/rhyme/templates/rhyme/base.html
+++ b/rhyme/templates/rhyme/base.html
@@ -30,10 +30,16 @@
                         Songs
                     </a>
                 </li>
-                <li class=''>
+                <li>
                     <a href='{% url "albums" %}'>
                         <i class="fas fa-compact-disc"></i>
                         Albums
+                    </a>
+                </li>
+                <li>
+                    <a href='{% url "playlist" %}'>
+                        <i class="fas fa-list"></i>
+                        Playlist
                     </a>
                 </li>
             </ul>
