--- a/rhyme/templates/rhyme/partials/omni_filter.html
+++ b/rhyme/templates/rhyme/partials/omni_filter.html
@@ -1,1 +1,1 @@
-<input data-bind="value: omniFilter, valueUpdate: 'keyup'" />
+<input data-bind="value: omniFilter, valueUpdate: 'keyup'" style="width: 100px" />
