--- a/rhyme/templates/rhyme/partials/item_page_filters.html
+++ b/rhyme/templates/rhyme/partials/item_page_filters.html
@@ -1,3 +1,5 @@
+<!-- TODO: rename -->
+<!-- TODO: "edit" (remove & pop up related modal) on clicking outside of X -->
 <ul id="read-only-filters" class="horizontal" data-bind="foreach: filters">
     <li>
         <span class="label label-info">
