--- a/rhyme/templates/rhyme/partials/modal_filter_base.html
+++ b/rhyme/templates/rhyme/partials/modal_filter_base.html
@@ -1,5 +1,5 @@
 <a class="btn btn-default" data-toggle="modal" data-target="#filter-modal-{{ name|slugify }}">
-    <i class="fa fa-plus"></i>
+    <i class="fas fa-{{ icon|default:"plus" }}"></i>
     {{ name }}
 </a>
 
